--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 [
 {
-"version":"1.1",
-"ch":"اضافه شدن بخش کدهای آنلاین جاوا",
-"link":"https://www.mediafire.com/file/7epk4b02yl0xo0b/Sketchx_1.1.apk/file"
+"version":"1.2",
+"ch":"رفع مشکل قسمت کد های آنلاین،اضافه کردن پروژه،",
+"link":"https://myket.ir/app/com.sketchx.xc"
 }
 ]
