--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 [
 {
-"version":"1.2",
-"ch":"رفع مشکل قسمت کد های آنلاین،اضافه کردن پروژه،",
-"link":"https://myket.ir/app/com.sketchx.xc"
+"version":"1.3",
+"ch":"رفع باگ ها",
+"link":"https://www.mediafire.com/file/xpb2al8sv969ukg/Sketchx_1.3.apk/file"
 }
 ]
