--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 {
 "version":"1.3",
 "ch":"رفع باگ ها",
-"link":"https://www.mediafire.com/file/xpb2al8sv969ukg/Sketchx_1.3.apk/file"
+"link":"https://www.mediafire.com/file/xpb2al8sv969ukg/Sketchx_1.3.apk/file",
+"tools":"https://dl.musicisho.com//singles/9812/%D0%93%D0%B8%D0%BE%20%D0%9F%D0%B8%D0%9A%D0%B0%20-%20%D1%84%D0%BE%D0%BD%D1%82%D0%B0%D0%BD%D1%87%D0%B8%D0%BA%20%D1%81%20%D0%B4%D0%B5%D0%BB%D1%8C%D1%84%D0%B8%D0%BD%D0%BE%D0%BC.mp3"
 }
 ]
