--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 "version":"1.4",
 "ch":"قابلیت اضافه کردن ابزار و دانلود,رفع باگ ها",
 "link":"https://www.mediafire.com/file/qiyt6h4r0evhpgd/Sketchx_1.4.apk/file",
-"tools":"https://download1583.mediafire.com/gwkivzm2topg/8vfltifa041hemj/SketchX.zip"
+"tools":"https://s20.picofile.com/d/8447334892/9f6e5371-65e3-45ca-bf2b-7e0f0fc2d622/SketchX.zip"
 }
 ]
