--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 "version":"1.4",
 "ch":"قابلیت اضافه کردن ابزار و دانلود,رفع باگ ها",
 "link":"https://www.mediafire.com/file/qiyt6h4r0evhpgd/Sketchx_1.4.apk/file",
-"tools":"https://github.com/amirsina84/sketchx/raw/main/SketchX.zip"
+"tools":"https://31.filelu.com/d/w53h2gtpjqqnjjtak2m5i5hkrel5dezcw6opbgstpfkerxforpelgsh4vhamb2llx5hog36j/SketchX.zip"
 }
 ]
